cncProd/force-app/main/default/objects/SA_Additional_Charge__c/SA_Additional_Charge__c.object-meta.xml
<CustomObject>
    <label>SA Additional Charge</label>
    <nameField>
        <displayFormat>SAC-{0000000000}</displayFormat>
        <label>SA Addtional Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA Additional Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>