cncProd/force-app/main/default/objects/SA_Additional_Charge__c/fields/IsRoadTaxSelected__c.field-meta.xml
<CustomField>
    <fullName>IsRoadTaxSelected__c</fullName>
    <formula>IF(OR(AND(Sales_Agreement__r.Road_Tax_Top_Up__c, SAD_ADM_CHRGCD__c = &apos;R002&apos;),
      AND(!Sales_Agreement__r.Road_Tax_Top_Up__c, SAD_ADM_CHRGCD__c = &apos;R004&apos;, SAD_INCPRICE__c != &apos;INC&apos;)), true, false)</formula>
    <label>IsRoadTaxSelected</label>
    <type>Checkbox</type>
</CustomField>