cncProd/force-app/main/default/objects/SA_Additional_Charge__c/fields/roadTaxNotDisplay__c.field-meta.xml
<CustomField>
    <fullName>roadTaxNotDisplay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>roadTaxNotDisplay</label>
    <type>Checkbox</type>
</CustomField>