cncProd/force-app/main/default/objects/SA_Additional_Charge__c/fields/SAD_ADDCHARGE__c.field-meta.xml
<CustomField>
    <fullName>SAD_ADDCHARGE__c</fullName>
    <formula>IF(SAD_INCPRICE__c = &apos;INC&apos;, 
	&apos;INCLUSIVE&apos;,
	IF(SAD_CHARGES__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;S$ &quot; &amp;
	IF(ABS(SAD_CHARGES__c) &gt;= 1000000, TEXT(FLOOR(ABS(SAD_CHARGES__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
	IF(ABS(SAD_CHARGES__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(SAD_CHARGES__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
	RIGHT(TEXT(FLOOR(ABS(SAD_CHARGES__c))), 3) &amp; &quot;.&quot; &amp;
	IF(MOD(ABS(SAD_CHARGES__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(SAD_CHARGES__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(SAD_CHARGES__c) , 1), 2) * 100, 99))) &amp;
	IF(SAD_CHARGES__c &lt; 0, &quot;)&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Additional Charge</label>
    <type>Text</type>
</CustomField>