cncProd/force-app/main/default/objects/SA_Additional_Charge__c/fields/SAD_CHARGES__c.field-meta.xml
<CustomField>
    <fullName>SAD_CHARGES__c</fullName>
    <label>Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>