cncProd/force-app/main/default/objects/SA_Additional_Charge__c/fields/SAD_INCPRICE__c.field-meta.xml
<CustomField>
    <fullName>SAD_INCPRICE__c</fullName>
    <label>Inclusive</label>
    <length>3</length>
    <type>Text</type>
</CustomField>