cncProd/force-app/main/default/objects/SA_Additional_Charge__c/fields/SAD_PACKAGE_REBATE__c.field-meta.xml
<CustomField>
    <fullName>SAD_PACKAGE_REBATE__c</fullName>
    <label>Package Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>