cncProd/force-app/main/default/objects/SA_Additional_Charge__c/fields/SAD_PRINT__c.field-meta.xml
<CustomField>
    <fullName>SAD_PRINT__c</fullName>
    <label>Print</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>