cncProd/force-app/main/default/objects/SA_Additional_Charge__c/fields/SAD_SUPINVOICE__c.field-meta.xml
<CustomField>
    <fullName>SAD_SUPINVOICE__c</fullName>
    <label>Sub Invoice</label>
    <length>20</length>
    <type>Text</type>
</CustomField>